
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Add "sudo" user attribute, which bypasses access permissions for said user; upgrade to 2.2.1 makes Super Users in Administrator group sudo users
- [#7445] Fix issues with TVs not respecting Resource Groups limiting access
- [#7446] Added extra checks to protect against parse errors with :then and :else output filters
- [#7455] Fallback to TV name if caption not found when displaying TV inputs
- [#7456] Fix for minify not modified status in fastcgi environments
- [#6931] Workaround for template changing issue on servers that have misconfigured date_timzeone setting
- [#6687] Fix duplicated OK buttons in MODx.Console in certain situations
- [#6501] Fix SuperBoxSelect selections spanning multiple rows
- [#6496] Fix quick edit modal windows for elements on smaller screens.
- [#6864] Fix rare issue where primary group is not set for user, and custom dashboard for their group does not propagate
- [#7011] Prevent infinite recursion error in modElement::isStaticSourceMutable
- [#7333] Prevent error when id is undefined in resource edit controller
- [#7364] Add setting to set default sort field of MODx.Browser view
- [#7363] Check for this.stateful in MODx.tree.Tree::_saveState
- Add missing index to modSession.access
- [#7357] Prevent viewing of Profile if user does not have change_profile permission
- [#7322] Fix issue where certain regions were not able to be hid via FC; clarified FC set labels
- [#7362] Fix issue with conflicting FC Sets when User belongs to more than one User Group with a Set
- Update to xPDO 2.2.3-pl
- Prevent fatal error if invalid class_key is passed to Resource edit/create page
- [#7052] Prevent username/host/dbname from being set as a system setting placeholder
- [#3860] Fix session issue with modUser joinGroup/leaveGroup methods